// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`channel list actions creates FETCH_CHANNELS_FAILURE when fetching channels has been rejected 1`] = `
Array [
  Object {
    "type": "FETCH_CHANNELS_REQUEST",
  },
  Object {
    "type": "FETCH_CHANNELS_FAILURE",
  },
]
`;

exports[`channel list actions creates FETCH_CHANNELS_FAILURE when fetching subscriptions has been rejected 1`] = `
Array [
  Object {
    "type": "FETCH_CHANNELS_REQUEST",
  },
  Object {
    "type": "FETCH_CHANNELS_FAILURE",
  },
]
`;

exports[`channel list actions creates FETCH_CHANNELS_SUCCESS when fetching channels has been resolved 1`] = `
Array [
  Object {
    "type": "FETCH_CHANNELS_REQUEST",
  },
  Object {
    "payload": Array [
      "DevTips",
      "Fun Fun Function",
    ],
    "type": "FETCH_CHANNELS_SUCCESS",
  },
]
`;

exports[`channel list actions creates FETCH_CHANNELS_SUCCESS when fetching subscriptions has resolved with null 1`] = `
Array [
  Object {
    "type": "FETCH_CHANNELS_REQUEST",
  },
  Object {
    "payload": Array [],
    "type": "FETCH_CHANNELS_SUCCESS",
  },
]
`;

exports[`channel list actions creates FETCH_CHANNELS_SUCCESS when fetching subscriptions has resolved with undefined 1`] = `
Array [
  Object {
    "type": "FETCH_CHANNELS_REQUEST",
  },
  Object {
    "payload": Array [],
    "type": "FETCH_CHANNELS_SUCCESS",
  },
]
`;

exports[`channel list actions should create an action to handle an error 1`] = `
Object {
  "type": "FETCH_CHANNELS_FAILURE",
}
`;

exports[`channel list actions should create an action to receive channels 1`] = `
Object {
  "payload": Array [
    "DevTips",
    "Fun Fun Function",
  ],
  "type": "FETCH_CHANNELS_SUCCESS",
}
`;

exports[`channel list actions should create an action to request channels 1`] = `
Object {
  "type": "FETCH_CHANNELS_REQUEST",
}
`;
